# TankControllerPico

./: .all-contributorsrc  .codespellrc  .flake8  .gitleaksignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  conftest.py  format.sh  main.py  pyproject.toml  pytest.ini  run.sh  run_gui.sh  test.sh  zizmor.yml
.github/workflows/: check-spelling.yml  linter.yml  pytest.yml
src/: titrator.py  titrator_driver.py
src/devices/: date_time.py  eeprom.py  ethernet.py  keypad_mock.py  library.py  ph_calibration_warning.py  ph_control.py  ph_probe.py  ph_probe_mock.py  pid.py  stir_control.py  syringe_pump.py  temperature_probe.py  thermal_control.py  thermal_probe.py
src/ui_state/: main_menu.py  ui_state.py  wait.py
tank_controller/: gui.py  tank_controller.py  tank_controller_driver.py
tank_controller/devices/: keypad_mock.py  library.py  liquid_crystal.py  ph_probe.py  stir_control.py  syringe_pump.py  temperature_probe.py
tank_controller/ui_state/: main_menu.py  ui_state.py
test/: tank_controller_test.py
test/devices/: eeprom_test.py  ethernet_test.py  ph_control_test.py  ph_probe_test.py  pid_test.py  sd_test.py  stir_control_test.py  thermal_probe_test.py
test/ui_state/: main_menu_test.py  view_device_address_test.py  view_google_mins_test.py  view_google_sheet_interval_test.py  view_log_file_test.py  view_ph_calibration_test.py  view_pid_constants_test.py  view_tank_id_test.py  view_thermal_correction_test.py  view_time_test.py  view_version_test.py
tests/: titrator_test.py
tests/devices/: date_time_test.py  eeprom_test.py  ethernet_test.py  keypad_mock_test.py  liquid_crystal_mock_test.py  ph_calibration_warning_test.py  ph_control_test.py  ph_probe_mock_test.py  ph_probe_test.py  pid_test.py  sd_test.py  stir_control_test.py  syringe_pump_test.py  temperature_control_test.py  temperature_probe_test.py  thermal_control_test.py  thermal_probe_test.py
tests/ui_state/: main_menu_test.py  set_google_mins_test.py  set_kd_test.py  set_ki_test.py  set_kp_test.py  set_pid_on_off_test.py  set_tank_id.py  view_device_address_test.py  view_google_sheet_interval_test.py  view_log_file_test.py  view_pid_constants_test.py  view_tank_id_test.py  view_thermal_correction_test.py  view_time_test.py  view_version_test.py
titration/: titrator.py  titrator_driver.py  version.py
titration/devices/: eeprom.py  ethernet.py  keypad_mock.py  ph_control.py  (+6 more)
(+249 files in other folders)
