[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TankControllerPico"
version = "0.1.1"
description = "Tank Controller Pico Application"
requires-python = ">=3.12"
dependencies = [
    "adafruit-circuitpython-ads1x15",
    "adafruit-circuitpython-lis3dh", 
    "adafruit-circuitpython-max31865",
    "gpiozero",
    "pandas",
    "click",
    "adafruit-ads1x15",
    "exceptiongroup",
    "numpy",
    "adafruit-blinka",
]

[tool.setuptools.packages.find]
include = ["titration*"]
exclude = ["test*"]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort", 
    "pycodestyle",
    "pytest",
    "pylint",
    "pytest-cov",
    "pytest-mock",
    "codespell",
]
