[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TankControllerPico"
version = "0.1.1"
description = "Tank Controller Pico Application"
requires-python = "==3.9.*"
dependencies = [
    "adafruit-ads1x15",
    "adafruit-circuitpython-ads1x15",
    "adafruit-circuitpython-lis3dh", 
    "adafruit-circuitpython-max31865",
    "click",
    "exceptiongroup",
    "gpiozero",
    "numpy",
    "pandas",
]

[tool.setuptools.packages.find]
include = ["titration*"]
exclude = ["test*"]

[project.optional-dependencies]
dev = [
    "black",
    "codespell",
    "flake8",
    "isort", 
    "pycodestyle",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-mock",
]
