[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TankControllerPico"
version = "0.1.1"
description = "Tank Controller Pico Application"
requires-python = ">=3.14"
dependencies = [
    "adafruit-ads1x15",
    "adafruit-circuitpython-ads1x15",
    "adafruit-circuitpython-lis3dh", 
    "adafruit-circuitpython-max31865",
    "click",
    "exceptiongroup",
    "gpiozero",
    "numpy",
    "pandas",
]

[tool.setuptools.packages.find]
include = ["src*"]
exclude = ["tests*"]

[project.optional-dependencies]
dev = [
    "black",
    "codespell",
    "flake8",
    "isort", 
    "pycodestyle",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "ruff",
]

[tool.ruff.lint]
extend-select = ["B"]